Fixed footer clipping issue

--- a/checkout.css
+++ b/checkout.css
@@ -1,83 +1,84 @@
 * {
-	font-family: "IBM Plex Sans", sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
 }
 
 /*FORM INPUT STYLING START*/
 
 #checkoutTop {
-	border: none;
+  border: none;
 }
 
 #checkoutTop h1 {
-	margin-left: 5vw;
-	margin-top: 20px;
+  margin-left: 5vw;
+  margin-top: 20px;
 }
 
 #checkoutContainer {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	padding: 0 25px;
-	max-width: 1000px;
-	margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0 25px;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 .checkoutForm {
-	margin-right: 20px;
+  margin-right: 20px;
 }
 
 .checkoutForm h1 {
-	margin: 20px 0;
-	width: 100%;
+  margin: 20px 0;
+  width: 100%;
 }
 
 .formInfo {
-	font-size: 25px;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	/* margin-left: 315px;
+  font-size: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  /* margin-left: 315px;
   margin-top: 30px; */
 }
 
 .smallFormInfo {
-	display: flex;
-	justify-content: space-between;
-	width: 95%;
-	margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  width: 95%;
+  margin: 0 auto;
 }
 
 .formInput {
-	width: 90%;
-	height: 5vh;
-	border-radius: 10px;
-	border-color: #eaedee;
-	border-style: solid;
-	padding-left: 17px;
-	font-size: 20px;
-	margin: 10px auto;
+  width: 90%;
+  height: 5vh;
+  border-radius: 10px;
+  border-color: #eaedee;
+  border-style: solid;
+  padding-left: 17px;
+  font-size: 20px;
+  margin: 10px auto;
 }
 
 #checkoutContainer label {
-	margin: 12px 0;
+  margin: 12px 0;
 }
 
 .inputHalf {
-	width: 46%;
+  width: 46%;
 }
 
 .inputThird {
-	width: 29%;
+  width: 29%;
+  padding-bottom: 80px;
 }
 
 #footerStyling {
-	margin-top: 35px;
+  margin-top: 35px;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-	-webkit-appearance: none;
-	margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 /*FORM INPUT STYLING END*/
@@ -85,139 +86,139 @@ input::-webkit-inner-spin-button {
 /*MINI CART STYLING START*/
 
 #miniCartItems {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 #miniCartContainer {
-	width: 360px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  width: 360px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .miniCartItem {
-	border: 2px solid #eaedee;
-	border-radius: 10px;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	margin: 10px 0;
+  border: 2px solid #eaedee;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
 }
 
 .miniCartItem img {
-	width: 15%;
-	height: auto;
-	padding: 10px;
+  width: 15%;
+  height: auto;
+  padding: 10px;
 }
 
 p.itemPrice {
-	color: #918f8f;
-	padding-right: 10px;
+  color: #918f8f;
+  padding-right: 10px;
 }
 
 p.itemName {
-	font-weight: 700;
+  font-weight: 700;
 }
 
 p.priceLabel,
 p.totalLabel {
-	width: 50%;
-	padding: 5px 0;
+  width: 50%;
+  padding: 5px 0;
 }
 
 p.priceLabel,
 p.priceValue {
-	font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 p.totalLabel,
 p.totalValue {
-	font-weight: 900;
-	font-size: 1.5rem;
+  font-weight: 900;
+  font-size: 1.5rem;
 }
 
 #totalContainer {
-	width: 100%;
+  width: 100%;
 }
 
 .totalCalculator {
-	background-color: rgb(239, 242, 244);
-	border-top-left-radius: 20px;
-	border-top-right-radius: 20px;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	padding: 25px 15%;
+  background-color: rgb(239, 242, 244);
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 25px 15%;
 }
 
 .finalTotal {
-	background-color: rgb(255, 192, 35);
-	border-bottom-left-radius: 20px;
-	border-bottom-right-radius: 20px;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	padding: 25px 15%;
+  background-color: rgb(255, 192, 35);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 25px 15%;
 }
 a {
-	text-decoration: none;
-	display: flex;
-	align-items: center;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
 }
 button#checkoutButton {
-	background-color: #2d2a24;
-	color: white;
-	padding: 10px 30px;
-	margin-top: 20px;
-	border-radius: 50px;
-	border-style: none;
-	display: flex;
-	justify-content: center;
-	text-decoration: none;
+  background-color: #2d2a24;
+  color: white;
+  padding: 10px 30px;
+  margin-top: 20px;
+  border-radius: 50px;
+  border-style: none;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
 }
 
 button#checkoutButton {
-	background-color: #2d2a24d2;
+  background-color: #2d2a24d2;
 }
 .miniCartQuantityContainer {
-	display: flex;
+  display: flex;
 }
 
 .miniCartItemQty {
-	margin-left: 5px;
+  margin-left: 5px;
 }
 
 .cartNameAndQty {
-	width: 200px;
+  width: 200px;
 }
 
 .miniCartPrice {
-	margin-right: 30px;
+  margin-right: 30px;
 }
 /*DESKTOP STYLING*/
 
 @media only screen and (min-width: 769px) {
-	.checkoutForm {
-		width: 60%;
-	}
+  .checkoutForm {
+    width: 60%;
+  }
 
-	#miniCartContainer {
-		width: 40%;
-		margin: 114px auto;
-	}
+  #miniCartContainer {
+    width: 40%;
+    margin: 114px auto;
+  }
 }
 
 @media only screen and (min-width: 1025px) {
-	.checkoutForm {
-		width: 66.9%;
-	}
+  .checkoutForm {
+    width: 66.9%;
+  }
 
-	#miniCartContainer {
-		width: 33.1%;
-		margin: 137px auto;
-	}
+  #miniCartContainer {
+    width: 33.1%;
+    margin: 137px auto;
+  }
 }
